# hamming_neural

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  test
hamming-neural/: hamming.m  hamming.py  main.py  neural.py  ui.py
hamming_neural/: hamming.m  hamming.py  image.py  main.py  neural.py  test.py  ui.py
