[metadata]
name = hamming_neural
version = 0.1
summary = Лабораторная работа по нейронным сетям
description-file = README.rst
license = GNU GPL
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU GPL
    Operating System :: POSIX :: Linux
author = ivan&michael

[files]
packages =
	hamming_neural

[entry_points]
console_script =
	hamming_neural = hamming_neural.main:main